--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "hello jenkins test app",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "mocha"
   },
   "repository": {
